added localStorage and project IDs

--- a/src/template.html
+++ b/src/template.html
@@ -36,7 +36,7 @@
             </div>
             <div>
                 <label for="todoAdd">Add todo to which project: </label>
-                <input type="text" id="todoAdd" name="todoAdd">
+                <select id="todoAdd" name="todoAdd"></select>
             </div>
 
             <button type="submit" id="closeDialog">Add Todo</button>
